<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryText"
    android:orientation="vertical"
    android:padding="@dimen/medium">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextTitle.Bold"
            android:layout_width="@dimen/empty"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="left"
            android:text="@string/title_add_new_list"
            app:layout_constraintEnd_toStartOf="@+id/imageView_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_close"
            android:layout_width="@dimen/size_ic_config"
            android:layout_height="@dimen/size_ic_config"
            android:layout_marginEnd="@dimen/medium"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_menu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big"
            android:hint="@string/hind_add_new_list"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:startIconDrawable="@drawable/ic_baseline_add_box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/TextCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:text="@string/selected_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerViewColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:padding="@dimen/small"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="12dp" />

        <android.widget.Button
            android:id="@+id/btnDone"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:background="@drawable/bg_button"
            android:text="@string/add_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecyclerViewColors"
            tools:layout_editor_absoluteX="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>