<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryText"
    android:orientation="vertical"
    android:padding="@dimen/medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_title"
            style="@style/TextTitle.Bold"
            android:layout_width="@dimen/empty"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:gravity="left"
            android:text="@string/title_suggested_dialog"
            app:layout_constraintEnd_toStartOf="@+id/imageView_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_subtitle"
            style="@style/TextCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:gravity="left"
            android:text="@string/subtitle_suggested_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <ImageView
            android:id="@+id/imageView_close"
            android:layout_width="@dimen/size_ic_config"
            android:layout_height="@dimen/size_ic_config"
            android:layout_marginEnd="@dimen/medium"
            app:layout_constraintBottom_toBottomOf="@+id/textView_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_menu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_Suggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:maxHeight="@dimen/max_height_recycler_dialog"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subtitle"
            tools:itemCount="3"
            tools:listitem="@layout/item_check_option" />

        <android.widget.Button
            android:id="@+id/btnDone"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:background="@drawable/bg_button"
            android:text="@string/add_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_Suggested"
            tools:layout_editor_absoluteX="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialog_add_list"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_helpful_tips" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/title_suggested_dialog"
            android:textColor="@color/lightText"
            android:textSize="24sp" />

    </LinearLayout>




    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/copy_add"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_Suggested" />

</LinearLayout>-->